# sift

./: .env.signal-model.example  .env.testflight.example  .env.transformer-model.example  .gitignore  AGENTS.md  README.md  TRADEMARKS.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
agents/: architecture.md  development.md
ci_scripts/: ci_post_clone.sh  ci_post_xcodebuild.sh  ci_pre_xcodebuild.sh
docs/: IOS_CMD_TESTFLIGHT_UPLOAD.md  IOS_XCODE_MANAGED_SIGNING.md  PRIVACY.md  SUPPORT.md  TAXONOMY.md  TRAINING.md  XCODE_CLOUD.md
tools/: package_ios_builtin_models.sh  (+3 more)
tools/pii-trainer/: README.md  pyproject.toml  test_train_pii.py  train_pii.py
tools/pii-trainer/Evaluation/: clean-negatives.ndjson  plate-positives.ndjson
tools/transformer-trainer/: README.md  augment_dataset.py  compact_tokenizer.py  curate_dataset.py  export_message_filter_evidence.py  generalization-augmentation.json  generate_conversation_corpus.py  model_contract.py  pyproject.toml  quantization-profiles.json  quantize_candidates.py  record_device_metrics.py  run_ios_device_benchmark.sh  select_quantization_candidate.py  train_mmbert.py  train_setfit.py  upload_transformer_model.py
tools/transformer-trainer/tests/: test_augment_dataset.py  test_compact_tokenizer.py  test_curate.py  test_export_message_filter_evidence.py  test_generate_conversation_corpus.py  test_quantize_candidates.py  test_record_device_metrics.py  test_select_quantization_candidate.py  test_upload_transformer_model.py
tools/transformer-trainer/tests/fixtures/: manifest_v2_ed25519.json
(+174 files in other folders)
