[project]
name = "sift-transformer-trainer"
version = "0.1.0"
description = "Train a multilingual SetFit SMS classifier and export it as a frozen Core ML model for Sift."
requires-python = ">=3.10,<3.13"
dependencies = [
    "setfit>=1.1.0,<2",
    "sentence-transformers>=3.0,<4",
    "transformers>=4.44,<4.50",
    "datasets>=2.20,<4",
    "torch>=2.3,<2.6",
    "coremltools>=8.0,<9",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
]

[tool.uv]
package = false
